@@ -1,5 +1,12 @@
 2007-11-07  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-utils.[ch],
+	* src/vinagre-main.c,
+	* src/vinagre-connection.[ch],
+	* src/vinagre-commands.c: Improved error handling
+
+2007-11-07  Jonh Wendell <jwendell@gnome.org>
+
 	More hack on .vnc file format support:
 	
 	* data/vinagre-ui.xml,
